create URI instead of URL